[package]
name = "tzkbc"
version = "0.1.0"
edition = "2021"
default-run = "tzkbc"

[workspace]
members = ["."]
default-members = ["."]

[[bin]]
name = "tzkbc"
path = "src/main.rs"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
bincode = "1.3.3"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
bellman = "0.14.0"
pairing = "0.23.0"
ark-relations = "0.5.1"
ark-snark = "0.5.1"
ark-groth16 = "0.5.0"
ark-bn254 = "0.5.0"
ark-std = "0.5.0"
structopt = "0.3.26"
ring = "0.17.8"
bs58 = "0.5.1"
ripemd = "0.1.3"